src/model/position/tests/snapshots/cli_chess__model__position__tests__test_position_case6.snap
---
source: src/model/position/tests/mod.rs
expression: position

---
Some(
    Position {
        rank: _1,
        file: B,
    },
)
